tests/snapshots/integration__integration_tests__prune__prune_execute_with_failures.snap
---
source: tests/integration_tests/prune.rs
info:
  program: wt
  args:
    - prune
    - "--yes"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----

Integrated branches:
  feature/success → main (ancestor)
  feature/will-fail → main (ancestor)

Removing 2 items...
[36m◎ Removing [1mfeature/success[22m worktree & branch in background (ancestor of [1mmain[22m,[39m [2m⊂[22m[36m)[39m
[32m✓[39m feature/success main (ancestor)
[36m◎ Removing [1mfeature/will-fail[22m worktree & branch in background (ancestor of [1mmain[22m,[39m [2m⊂[22m[36m)[39m
[32m✓[39m feature/will-fail main (ancestor)

[32m✓[39m Removed 2 items
